test/libsolidity/syntaxTests/parsing/location_specifiers_for_state_variables_multi.sol
contract Foo {
	uint[] memory storage calldata x;
}
// ----
// ParserError 2314: (23-29): Expected identifier but got 'memory'
